<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Cropping Example</string>
    
    <!-- Main Page -->
    <string name="ma_crop_ver1_button">Start Crop Algorithm Version 1</string>
    <string name="ma_crop_ver2_button">Start Crop Algorithm Version 2</string>
    <string name="ma_info_text">Click on button below to start cropping image.</string>
    
    <!-- Crop Page -->
    <string name="cp_info_text">Resize/Orient Image to Fit Face Inside the Orange Circle</string>
    <string name="cp_image_contentDesc">Image</string>
    <string name="cp_template_contentDesc">Template</string>
    <string name="cp_change_img_contentDesc">Change Image</string>
    <string name="cp_crop_button">Crop Image</string>
    <string name="cp_template_button">Change Template</string>
    
    <!-- Select Dialog -->
    <string name="sd_select_template_text">Select Template</string>
    <string name="sd_icon_contentDesc">Template Icons</string>
    
</resources>