<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/fcp_info_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:text="@string/cp_info_text"/>
    
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <ImageView
            android:id="@+id/cp_img"
            android:contentDescription="@string/cp_image_contentDesc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="matrix" />

        <ImageView
            android:id="@+id/cp_face_template"
            android:contentDescription="@string/cp_template_contentDesc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/face_oval" 
            android:scaleType="centerInside" />
    </FrameLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cp_template_button"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="onChangeTemplateButton" />
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cp_crop_button"
            style="?android:attr/buttonBarButtonStyle" 
            android:onClick="onCropImageButton"/>
    </LinearLayout>
</LinearLayout>